--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/joy": "^5.0.0-beta.32",
     "@types/react-transition-group": "^4.4.10",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
