--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-transition-group": "^4.4.10",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "eventemitter3": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
